messed with private api to pull information from elastic search

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -10,7 +10,6 @@
       <br />
       </div>
       <h1>{{ title }}</h1>
-      <p class="lead">{{ description }}</p>
       <p>The current time is {{ currentTime }}</p>
       <br />
     </div>
@@ -19,8 +18,10 @@
 <div class="container">
   <div class="row">
     <div class="col-12-sm">
+    <h1>test:</h1>
+			<pre>{{ test | json }}</pre>
       <h1>Index: {{ index }}</h1>
-			<pre>{{ status | json }}</pre>
+			<pre>{{ description | json }}</pre>
     </div>
   </div>
 </div>
